[project]
name = "odoo-addons-oca-website"
version = "17.0.20250114.0"
dependencies = [
    "odoo-addon-website_conditional_visibility_user_group>=17.0dev,<17.1dev",
    "odoo-addon-website_cookiebot>=17.0dev,<17.1dev",
    "odoo-addon-website_cookiefirst>=17.0dev,<17.1dev",
    "odoo-addon-website_form_require_legal>=17.0dev,<17.1dev",
    "odoo-addon-website_forum_subscription>=17.0dev,<17.1dev",
    "odoo-addon-website_google_tag_manager>=17.0dev,<17.1dev",
    "odoo-addon-website_odoo_debranding>=17.0dev,<17.1dev",
    "odoo-addon-website_require_login>=17.0dev,<17.1dev",
    "odoo-addon-website_snippet_big_button>=17.0dev,<17.1dev",
    "odoo-addon-website_snippet_marginless_gallery>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
